Fix height jumping on mobile

--- a/sass/_mobile.scss
+++ b/sass/_mobile.scss
@@ -2,7 +2,6 @@
 
   section {
     height: auto;
-    min-height: 100%;
   }
 
   section:first-child {
@@ -54,9 +53,3 @@
   }
 
 }
-
-//@media (max-height : 400px) {
-//  article {
-//    width: 45%;
-//  }
-//}
